--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,27 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-  background-color: #1d1d1d;
-}
-
 .logo {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  background-color: #e3e7f0;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
+.app {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  flex-shrink: 0;
 }
