--- a/src/style/Chamber.css
+++ b/src/style/Chamber.css
@@ -7,8 +7,44 @@
 
 .yap-title {
     background: #f0f0f0;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 20px;
+    border-radius: 8px;
     text-decoration: none;
-    color: black;
+    color: #333;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease; /* Smooth transition for transform and shadow */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px; 
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+}
+
+.yap-title:hover {
+    transform: scale(1.05);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    background-color: #e9e9e9;
+}
+
+
+.yap-detail-container {
+    width: 60%; 
+    margin: 20px auto; 
+    padding: 20px;
+    background-color: #f9f9f9;
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    overflow-y: auto;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    font-family: 'Times New Roman', Times, serif;
+    color: #333;
+    text-align: left;
+}
+
+.yap-detail-title {
+    margin-bottom: 20px; 
+    font-size: 24px; 
+}
+
+.yap-detail-content {
+    white-space: pre-wrap; 
 }
