css and styling for chamber, home, etc

--- a/src/style/LoginPage.css
+++ b/src/style/LoginPage.css
@@ -49,12 +49,17 @@ h2 {
 .input-group {
     margin-bottom: 20px;
     width: 100%;
+    border-radius: 40px !important;
+    radius: 40px !important;
 }
 
 .input-group label {
     display: block;
     margin-bottom: 5px;
     color: #666;
+    radius: 40px !important;
+    border-radius: 40px !important;
+
 }
 
 .input-group input {
@@ -63,6 +68,9 @@ h2 {
     border: 2px solid #ff2600;
     border-radius: 40px;
     box-sizing: border-box;
+    border-radius: 40px !important;
+    radius: 40px !important;
+
 }
 
 .login-button {
