--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -62,30 +62,25 @@ h1 {
 
 .main-container {
     display: flex;
+    align-items: center; 
+    justify-content: center; 
     height: 100vh;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
 }
 
 .content-container {
-    padding-left: 150px;
-    max-width: 600px;
-    justify-content: center;
-    text-align: center;
+    text-align: center; 
+    max-width: 600px; 
+    width: 100%; 
 }
 
-.image-container {
-    flex: 1 1 auto;
+
+.content-container {
+    padding: 0;
     display: flex;
-    justify-content: flex-end;
-    padding-right: 40px;
-    order: 2;
-}
-
-.right-image {
-    max-width: 800px;
-    height: auto;
-    border-radius: 80px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
