added css and logo link to /

--- a/src/style/SignupPage.css
+++ b/src/style/SignupPage.css
@@ -9,7 +9,7 @@ body,
     background-color:#f4f5f8;
 }
 
-.signup-containesr {
+.signup-container {
     display: flex;
     justify-content: center;
     align-items: center;
