--- a/src/style/LoginPage.css
+++ b/src/style/LoginPage.css
@@ -74,15 +74,16 @@ h2 {
 }
 
 .login-button {
+    background-color: #ff2600;
     width: 100%;
     padding: 10px 20px;
-    background-color: #ffedea;
-    color: rgb(0, 0, 0);
-    border: 2px solid #ff2600;
+    color: #fff;
+    border: 2px solid rgba(255, 255, 255, 0.5);
     border-radius: 40px;
     font-size: 16px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: transform 0.2s; 
+    margin: 5px 10px;
 }
 
 .login-button:hover {
