Fix typo of yapped to yappad

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -13,11 +13,11 @@
     font-weight: bolder !important;
 }
 
-.navlink-yapped {
+.navlink-yappad {
     color: white !important;
 }
 
-.navlink-yapped:hover {
+.navlink-yappad:hover {
     text-decoration: underline;
 }
 
