Changed #FF2600 to #FF5108

--- a/src/style/Chamber.css
+++ b/src/style/Chamber.css
@@ -47,7 +47,7 @@
 .yap-detail-title {
     margin-bottom: 20px;
     font-size: 24px; 
-    color: #ff2600; 
+    color: #FF5108; 
 }
 
 .yap-detail-content {
@@ -60,7 +60,7 @@
 button {
     padding: 10px 20px;
     margin-bottom: 20px; 
-    background-color: #ff2600;
+    background-color: #FF5108;
     color: white;
     border: none;
     border-radius: 25px !important; 
