--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -46,7 +46,7 @@ h1 {
 .button {
     background-color: #ffedea;
     color: rgb(0, 0, 0);
-    border: 2px solid #ff2600;
+    border: 2px solid #FF5108;
     border-radius: 40px;
     padding: 10px 20px;
     cursor: pointer;
@@ -56,7 +56,7 @@ h1 {
 }
 
 .button:hover {
-    background-color: #ff2600;
+    background-color: #FF5108;
     color: #fff;
 }
 
