--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -74,7 +74,8 @@ body {
 }
 
 .yapStory {
-    width: 80%;
+    width: 80vw;
+    max-width: 500px;
     min-height: 150px;
     margin: 20px auto;
     background-color: rgba(255, 255, 255, 0.5);
