--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -52,12 +52,16 @@ body {
     -webkit-backdrop-filter: blur(5px);
     border: 2px solid #ddd;
     padding: 20px;
-    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-y: visible;
+    resize: vertical;
+    overflow-wrap: break-word;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
     color: #333;
     text-align: left;
     border-radius: 8px;
+    min-height: 100px;
 }
 
 .search-button {
