--- a/src/style/LoginPage.css
+++ b/src/style/LoginPage.css
@@ -111,6 +111,17 @@ h2 {
     color: #FF5108;
 }
 
+.forgot-password-link {
+    margin-top: 20px;
+    color: #818181;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.forgot-password-link:hover {
+    color: #FF5108;
+}
+
 @media (max-width: 500px) {
     .login-form {
         padding: 20px;
