Added styling for active page

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,3 +1,11 @@
+.container{
+    margin-top: 10px !important;
+}
+
+.show {
+    margin-top: 10px !important;
+}
+
 .navbar.navbar-custom .navbar-nav {
     align-items: center;
     justify-content: center;
@@ -13,12 +21,24 @@
     font-weight: bolder !important;
 }
 
+.navlink-yappad.nav-link{
+    max-width: fit-content;
+}
+
 .navlink-yappad {
+    border-radius: 50px;
     color: white !important;
+    padding: 10px !important;
 }
 
 .navlink-yappad:hover {
     text-decoration: underline;
+}
+
+.navlink-yappad.active {
+    border-radius: 50px;
+    background-color: white;
+    color: #FF5108 !important;
 }
 
 .button.navbar-toggler:hover {
