--- a/src/style/Chamber.css
+++ b/src/style/Chamber.css
@@ -1,6 +1,7 @@
 .yaps-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    width: 100%;
     gap: 20px;
     padding: 20px;
     justify-content: center;
