--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     margin-top: 10px !important;
 }
 
@@ -21,7 +21,7 @@
     font-weight: bolder !important;
 }
 
-.navlink-yappad.nav-link{
+.navlink-yappad.nav-link {
     max-width: fit-content;
 }
 
@@ -45,10 +45,20 @@
     background-color: white !important;
 }
 
+.navbar-signed-in-as {
+    color: white !important;
+    margin-left: 40px;
+    font-size: 10px;
+}
 
 .navbar-welcome-message {
-    color: white !important; 
-    margin-left: 90px; 
-    font-weight: 100%;
-    font-size: 5vh;
+    color: white !important;
+    margin-left: 40px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.signed-in-container {
+    display: flex;
+    flex-direction: column;
 }
